plugins {
    id 'java'
    id 'application'
}

group = 'com.ldts.t14g01.Tenebris'
version = '1.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:3.7.7'
    testImplementation 'net.jqwik:jqwik:1.5.1'
}

test {
    useJUnitPlatform()
}

application {
    mainClass.set('com.ldts.t14g01.Tenebris.Tenebris')
}